--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<link rel="stylesheet" href="css/styles.css"/>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include('header') -%>
 <body>
     <div class="box" id="heading">
-        <h2><%=todaysDay%></h2>
-        <h2><%=todaysDate%></h2>
+        <h2><%=listTitle%></h2>
     </div>
 
     <div class="box" id="todolist-container">
@@ -23,7 +14,7 @@
         
             <form class="item" action="/" method="POST">
                 <input type="text" placeholder="Enter a new task" id="itemInp" name="itemInp"/>
-                <button type="submit">+</button>
+                <button type="submit" value=<%=listTitle%>>+</button>
             </form>    
         </div>
         <div id="resetButtonContainer">
@@ -31,5 +22,5 @@
         </div>
 
 <script src="scripts/script.js"></script>
-</body>
-</html>
+
+<%- include('footer') -%>
